--- a/projectProposal.tex
+++ b/projectProposal.tex
@@ -33,10 +33,29 @@
 
 \thispagestyle{plain}
 \begin{center}                  % Center the following lines
-{\Large 10-701 Term Project} \\
-Laxman Dhulipala, Harry Gifford, Wangzi He, Keith Miller \\ ldhulipa, hgifford, wangzih, keithmil
+{\Large 10-701 Term Project Proposal: Large Scale Image Retrieval}
 \end{center}
 
+\section*{Data Set}
+The data set will consist of large amount of images with various resolutions and corresponding labels for a subset of the images. We might need to reduce the resolution of these images (e.g. reduce to 32 * 32) and derive Gist descriptor for each image during preprocessing.
 
+\section*{Project Idea}
+Billions of images are now available online. We wonder whether there are efficient ways for clustering similar images and scene recognition. There have been some on-going research in this area. Various algorithms have been developed to accomplish this job and have achieved some amazing success.\\
+\\
+However, the research that we have noticed involves training classifiers with huge amounts of images (on the scale of million). Accuracy tends to be worse with a smaller data set. Due to the computational limitation, we would like to explore this area on a smaller scale (maybe thousands of images). We want to see whether we can improve the algorithms so that it returns more accurate results on a smaller scale with similar computational complexity.
+
+\section*{Software to write}
+We need to code a software that will pre-process raw images. During the pre-processing step, it will reduce resolution and derive Gist descriptor for each image. Moreover, we will implement the clustering algorithm (possibly distributed?) and see whether we can improve the results.
+
+\section*{Papers to read}
+Antonio Torralba, Rob Fergus and William T. Freeman.	 80 million tiny images: a large dataset for non-parametric object and scene recognition. IEEE Transactions on Pattern Analysis and Machine Intelligence, vol. 30, NO. 11, November 2008
+
+\section*{Teammates and work division}
+Laxman Dhulipala, Harry Gifford, Wangzi He, Keith Miller
+
+Laxman and Harry will code the clustering algorithm. Wangzi and Keith will code the preprocessing software. (I don't know how to divide the work. We should discuss it. Feel free to change.)
+
+\section*{Midterm milestone}
+We hope to finish the pre-processing software and the clustering algorithm. We want to test them on a small scale of images and get some data on accuracy. 
 
 \end{document}
