--- a/projectReport/projectReport.tex
+++ b/projectReport/projectReport.tex
@@ -5,38 +5,15 @@
 %\documentstyle[nips13submit_09,times,art10]{article} % For LaTeX 2.09
 
 
-\title{Formatting Instructions for NIPS 2013}
+\title{Unsupervised Feature Learning for Object Recognition}
 
 
 \author{
-David S.~Hippocampus\thanks{ Use footnote for providing further information
-about author (webpage, alternative address)---\emph{not} for acknowledging
-funding agencies.} \\
+Laxman Dhulipala, Harry Gifford, Wangzi He \\
 Department of Computer Science\\
-Cranberry-Lemon University\\
+Carnegie Mellon University University\\
 Pittsburgh, PA 15213 \\
-\texttt{hippo@cs.cranberry-lemon.edu} \\
-\And
-Coauthor \\
-Affiliation \\
-Address \\
-\texttt{email} \\
-\AND
-Coauthor \\
-Affiliation \\
-Address \\
-\texttt{email} \\
-\And
-Coauthor \\
-Affiliation \\
-Address \\
-\texttt{email} \\
-\And
-Coauthor \\
-Affiliation \\
-Address \\
-\texttt{email} \\
-(if needed)\\
+\texttt{ldhulipa, wangzih, hgifford@andrew.cmu.edu} \\
 }
 
 % The \author macro works with any number of authors. There are two commands
@@ -50,7 +27,7 @@ Address \\
 \newcommand{\fix}{\marginpar{FIX}}
 \newcommand{\new}{\marginpar{NEW}}
 
-%\nipsfinalcopy % Uncomment for camera-ready version
+\nipsfinalcopy % Uncomment for camera-ready version
 
 \begin{document}
 
