--- a/projectReport/ref.bib
+++ b/projectReport/ref.bib
@@ -20,3 +20,21 @@
   publisher={Springer}
 }
 
+@inproceedings{raina,
+  title={Self-taught learning: transfer learning from unlabeled data},
+  author={Raina, Rajat and Battle, Alexis and Lee, Honglak and Packer, Benjamin and Ng, Andrew Y},
+  booktitle={Proceedings of the 24th international conference on Machine learning},
+  pages={759--766},
+  year={2007},
+  organization={ACM}
+}
+
+@incollection{coates,
+  title={Learning feature representations with k-means},
+  author={Coates, Adam and Ng, Andrew Y},
+  booktitle={Neural Networks: Tricks of the Trade},
+  pages={561--580},
+  year={2012},
+  publisher={Springer}
+}
+
