--- a/projectReport/ref.bib
+++ b/projectReport/ref.bib
@@ -38,3 +38,10 @@
   publisher={Springer}
 }
 
+@inproceedings{coates11,
+  title={An analysis of single-layer networks in unsupervised feature learning},
+  author={Coates, Adam and Ng, Andrew Y and Lee, Honglak},
+  booktitle={International Conference on Artificial Intelligence and Statistics},
+  pages={215--223},
+  year={2011}
+}
