--- a/Poster/baposter/examples/poster_landscape/poster_landscape.tex
+++ b/Poster/baposter/examples/poster_landscape/poster_landscape.tex
@@ -122,19 +122,22 @@
   % Title
   {\sf %Sans Serif
   %\bf% Serif
-  Expression Invariant Face Recognition using a 3D Morphable Model}
+  \vspace{0.5em}
+  Unsupervised Feature Learning for Object Classification
+  \vspace{0.2em}
+  }
   % Authors
   {\sf %Sans Serif
   % Serif
-  Brian Amberg\hspace{3em}
-  brian.amberg@unibas.ch\hspace{3em}
-  University of Basel, Switzerland
+  Laxman Dhulipala, Harry Gifford, Wagnzi He\hspace{3em}
+  \{ldhulipa, hgifford, wangzih\}@andrew.cmu.edu\hspace{3em}
   }
   % University logo
-  {{\begin{minipage}{16em}
+  {{\begin{minipage}{25em}
     \hfill
-    \includegraphics[height=2em]{msrlogo}
-    \includegraphics[height=5.5em]{logo}
+%    \includegraphics[height=2em]{msrlogo}
+%    \includegraphics[height=5.5em]{logo}
+%     \includegraphics[width=10em]{cmu_seal}
   \end{minipage}}
   }
 
