--- a/Poster/baposter/examples/poster_landscape/poster_landscape.tex
+++ b/Poster/baposter/examples/poster_landscape/poster_landscape.tex
@@ -8,6 +8,9 @@
 \usepackage{relsize}
 \usepackage{multirow}
 \usepackage{bm}
+\usepackage{tkz-berge}
+\usepackage[upright]{fourier}
+\usepackage{bm}
 
 \usepackage{graphicx}
 \usepackage{multicol}
@@ -98,11 +101,11 @@
   bgColorOne=lighteryellow,
   bgColorTwo=lightestyellow,
   borderColor=reddishyellow,
-  headerColorOne=yellow,
-  headerColorTwo=reddishyellow,
+  headerColorOne=lightyellow,
+  headerColorTwo=silver,
   headerFontColor=black,
-  boxColorOne=lightyellow,
-  boxColorTwo=lighteryellow,
+  boxColorOne=lightestyellow,
+  boxColorTwo=lightestyellow,
   % Format of textbox
   textborder=roundedleft,
   % Format of text header
