--- a/Poster/baposter/examples/poster_landscape/poster_landscape.tex
+++ b/Poster/baposter/examples/poster_landscape/poster_landscape.tex
@@ -144,7 +144,9 @@
     \hfill
 %    \includegraphics[height=2em]{msrlogo}
 %    \includegraphics[height=5.5em]{logo}
-%     \includegraphics[width=10em]{cmu_seal}
+%     \includegraphics[width=20em]{cmu_seal}
+     \vspace{0.2em}
+     \includegraphics[height=5.5em]{seal}
   \end{minipage}}
   }
 
