changed my name

--- a/Poster/baposter/examples/poster_landscape/poster_landscape.tex
+++ b/Poster/baposter/examples/poster_landscape/poster_landscape.tex
@@ -136,7 +136,7 @@
   % Authors
   {\sf %Sans Serif
   % Serif
-  Laxman Dhulipala, Harry Gifford, Wagnzi He\hspace{3em}
+  Laxman Dhulipala, Harry Gifford, Wangzi He\hspace{3em}
   \{ldhulipa, hgifford, wangzih\}@andrew.cmu.edu\hspace{3em}
   }
   % University logo
